--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -49,7 +49,7 @@ const t = useTranslations(currentLang);
 			<div class="container mx-auto px-6 py-4">
 				<div class="flex items-center justify-between">
 					<a
-						href={`/${currentLang}/`}
+						href={`${import.meta.env.BASE_URL}/${currentLang}/`}
 						class="flex items-center gap-2"
 					>
 						<img
